Introduce PerspectiveService as part of system_server
This moves all the perspective logic from PerspectiveManager to
a central service that runs in system_server. This is the correct
way to do things and is much more efficient as there is only one
service no matter the number of clients (previously we would create
a new PerspectiveManager for each client that ran all the logic).

PerspectiveService relies on a state transition model for perspectives
to keep everyone on the same page. A perspective can be in either the
terminal states of STOPPED or RUNNING, or be in a transitionary state
like STARTING or STOPPING. Clients can choose to be kept informed of these
changes in real-time.

(cherry picked from commit 2a7731403cc7eb68f9b751215b7828572ff32262,
added updated vendor include directory and squashed static version of
IInterface::asBinder())
Signed-off-by: Preetam D'Souza <preetamjdsouza@gmail.com>

--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -2749,4 +2749,13 @@
   <java-symbol type="bool" name="use_lock_pattern_drawable" />
   <java-symbol type="drawable" name="lockscreen_notselected" />
   <java-symbol type="drawable" name="lockscreen_selected" />
+
+  <!-- maru -->
+  <!-- From PerspectiveService -->
+  <java-symbol type="string" name="desktop_notification_title_starting" />
+  <java-symbol type="string" name="desktop_notification_title_stopping" />
+  <java-symbol type="string" name="desktop_notification_title_running" />
+  <java-symbol type="string" name="desktop_notification_msg" />
+  <java-symbol type="drawable" name="ic_mdesktop" />
+  <!-- /maru -->
 </resources>
